--- a/.env
+++ b/.env
@@ -19,11 +19,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=35.214.212.160
 DB_PORT=3306
-
-##Produccion
-DB_DATABASE=optucorp_db2
-DB_USERNAME=optucorp_user1
-DB_PASSWORD=USM7M6LD6oIl
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 TIME_COOKIE=420
 
