Se crean migraciones, controladores

--- a/.env
+++ b/.env
@@ -15,15 +15,20 @@ LOG_CHANNEL=stack
 #DB_USERNAME=root
 #DB_PASSWORD=
 
+##Produccion
+#DB_CONNECTION=mysql
+#DB_HOST=35.214.212.160
+#DB_PORT=3306
+#DB_DATABASE=optucorp_db2
+#DB_USERNAME=optucorp_user1
+#DB_PASSWORD=USM7M6LD6oIl
 
 DB_CONNECTION=mysql
-DB_HOST=35.214.212.160
+DB_HOST=localhost
 DB_PORT=3306
-
-##Produccion
-DB_DATABASE=optucorp_db2
-DB_USERNAME=optucorp_user1
-DB_PASSWORD=USM7M6LD6oIl
+DB_DATABASE=archivos_pacific
+DB_USERNAME=root
+DB_PASSWORD=
 
 TIME_COOKIE=420
 
